# MonkeyCode

./: .gitignore  .gitmodules
.github/workflows/: agent-ci.yml  desktop-check.yml  desktop-macos.yml  desktop-win7.yml  desktop-windows.yml
agent/: .gitignore  Makefile  README.md  go.mod  go.sum
agent/cmd/mc-agent/: eval.go  main.go  mcp.go  platform.go  render.go  serve.go  skills.go  ui.html  worktree.go
agent/eval/baselines/: 2026-07-13-feature-coding.json
agent/internal/baizhi/: client.go  client_test.go  cookies.go  endpoints.go  http.go  mcstream.go  monkeycode.go  monkeycode_test.go  pow.go  pow_test.go  sync.go  sync_test.go  wechat.go  wechat_test.go
agent/internal/browser/: bridge.go  bridge_test.go  cdp.go  e2e_test.go  keys.go  ops.go  protocol.go  refs.go  session.go  snapshot.go  snapshot_test.go  tools.go
agent/internal/config/: config.go  config_test.go  models.go  models_test.go
agent/internal/contextmgr/: contextmgr.go  contextmgr_test.go
agent/internal/frame/: frame.go  frame_test.go
agent/internal/loop/: compact.go  history.go  loop.go  loop_test.go  save_test.go
agent/internal/mcp/: config.go  manager.go  mcp_test.go  tool.go  tool_test.go
agent/internal/platform/: client.go  login.go  platform_test.go  sync.go
agent/internal/policy/: persist.go  policy.go  policy_test.go
agent/internal/provider/: anthropic.go  debug.go  image_wire_test.go  openai.go  openai_responses.go  provider_test.go  repair.go  retry.go  transport.go  transport_test.go  types.go
agent/internal/repo/: repo.go  repo_test.go  wslpath.go  wslpath_test.go
agent/internal/server/: server.go  server_test.go
agent/internal/session/: session.go  session_test.go
agent/internal/skills/: skills.go  skills_test.go
agent/internal/subagent/: subagent.go  subagent_test.go
agent/internal/tools/: bash.go  bash_unix.go  bash_windows.go  edit.go  git.go  glob.go  image.go  image_test.go  read.go  search.go  todo.go  tool.go  tools_test.go  write.go
agent/internal/workspace/: worktree.go  worktree_test.go
agent/ui/: index.html  package-lock.json  package.json  vite.config.ts
agent/ui/src/: App.tsx  baizhi.tsx  chat.tsx  client.test.ts  client.ts  cloud.ts  cloudtask.tsx  cloudterm.tsx  components.tsx  icons.tsx  main.tsx  newtask.tsx  (+9 more)
browser-extension/: .gitignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser-extension/scripts/: gen-icons.mjs
browser-extension/src/: background.ts  bridge.ts  cdp.ts  core.ts  protocol.ts  router.ts  tabs.ts
browser-extension/test/: core.test.ts
desktop/: .gitignore  ARCHITECTURE.md  Cargo.lock.win7  Cargo.toml  Makefile  README.md  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.win7.conf.json
desktop/icons/: icon.icns
desktop/scripts/: check-pe-subsystem.py  check_command_contract.py  fake-wsl.sh  regen-win7-lock.sh  set_release_version.py  test_check_command_contract.py  test_makefile_agent_version.py  test_set_release_version.py
desktop/src/: config.rs  main.rs  native_pet.rs  probe.js  repo.rs  uploads.rs  util.rs  wsl.rs
desktop/src/baizhi/: cookies.rs  mod.rs  monkeycode.rs  sync.rs  tests.rs  wechat.rs
desktop/src/browser/: bridge.rs  mcp.rs  mod.rs  ops.rs  protocol.rs  refs.rs  session.rs  snapshot.rs  tests.rs
desktop/src/driver/: frame.rs  mod.rs  normalize.rs  ohmy.rs  ohmy_tests.rs  session.rs  subagent.rs  transport.rs
desktop/ui/: package-lock.json  package.json
desktop/ui/public/: pet.html
desktop/ui/src/: App.tsx  baizhi.tsx  baizhiapi.ts  chat.tsx  client.test.ts  client.ts  cloudapi.test.ts  cloudapi.ts  cloudfiles.tsx  cloudtask.tsx  cloudterm.tsx  codePreview.test.tsx  codec.ts  components.tsx  composer.tsx  filesdrawer.test.tsx  filesdrawer.tsx  host.ts  hostIntent.test.ts  icons.tsx  ipc.ts  main.tsx  markdownPaths.test.ts  markdownPaths.ts  markdownTable.test.ts  mcaccount.test.ts  mcaccount.ts  modelPicker.test.tsx  navigation.test.tsx  newtask.tsx  reduce.test.ts  reduce.ts  session.ts  sessionNotice.test.ts  sessionNotice.ts  sessionNoticeBanner.test.tsx  settings.test.ts  settings.tsx  sidebar.tsx  styles.css  (+9 more)
frontend/: package.json
mc-desktop/: .gitignore  ARCHITECTURE.md  Cargo.lock.win7  Cargo.toml  Makefile  README.md  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.ohmy.conf.json  tauri.win7.conf.json  tauri.windows.conf.json
mc-desktop/icons/: icon.icns
mc-desktop/permissions/autogenerated/: close_settings.toml  get_config.toml  open_settings_window.toml  save_config.toml
mc-desktop/scripts/: fake-wsl.sh  gen-latest-json.py  regen-win7-lock.sh
mc-desktop/src/: config.rs  main.rs  uploads.rs  wsl.rs
mc-desktop/src/baizhi/: cookies.rs  mod.rs  monkeycode.rs  pow.rs  sync.rs  tests.rs  wechat.rs
mc-desktop/src/browser/: bridge.rs  cdp.rs  keys.rs  mcp.rs  mod.rs  ops.rs  tests.rs
mc-desktop/src/driver/: frame.rs  mc.rs  mod.rs  ohmy.rs
mc-desktop/ui/: index.html  package.json  pet.html  settings.html  vite.config.ts
mc-desktop/ui/public/: error.html
mc-desktop/ui/src/: App.tsx  chat.tsx  client.ts  cloudtask.tsx  components.tsx  newtask.tsx  reduce.ts  settings.tsx  sidebar.tsx  styles.css  titlebar.tsx  types.ts  useSession.ts
mc-desktop/uidist/: index.html  pet.html
mc-desktop/uidist/assets/: index-CdgXWLZ2.css  index-CjGxqlzK.js  index-CkU6SB_-.js  index-DaQlzxBT.js
mc-desktop/uidist/fonts/: fonts.css
mobile/: capacitor.config.json  package.json
mobile-harmony/: .gitignore  README.md  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-harmony/harmony/: build-profile.json5  oh-package.json5
mobile-harmony/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
mobile-harmony/scripts/: check-routes.mjs  export-ota.mjs
mobile-harmony/specs/: NativeLiveAudioStream.ts  NativeMonkeyCode.ts
mobile-harmony/src/: App.tsx
mobile-harmony/types/: react-native-svg.d.ts  react-native-webview.d.ts  untyped-modules.d.ts
mobile/ota-server/: native-release.json  server.js
tasks/: lessons.md  todo.md
(+102 files in other folders)
