[package]
name = "mc-desktop"
# 版本 = YYMMDDNN(日期+两位序号)占主版本位,与 tauri.conf.json 保持一致
version = "26071401.0.0"
description = "MonkeyCode 本地桌面客户端(Tauri 薄壳:拉起 mc-agent 内核并承载其 UI)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"

[profile.release]
strip = true
lto = true
