[package]
name = "mc-desktop"
# 版本 = YYMMDDNN(日期+两位序号)占主版本位,与 tauri.conf.json 保持一致
version = "26071401.0.0"
description = "MonkeyCode 本地桌面客户端(Tauri 薄壳:拉起 mc-agent 内核并承载其 UI)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api:桌宠透明窗口在 macOS 依赖私有 API(transparent 方法
# 无此 feature 时在 mac 上被 cfg 掉,编译报 E0599);非 mac 平台是空操作。
# 需配套 tauri.conf.json 的 app.macOSPrivateApi=true。不上 App Store,可用。
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

# 桌宠窗口在 macOS 须是 NonactivatingPanel:普通 NSWindow 被点击会激活
# 应用(主窗口被提到最前并抢焦点→桌宠被显隐逻辑藏掉)。锁 rev 保证可复现。
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }

[profile.release]
strip = true
lto = true
